Student | Module | Result | Statistics  Support

--- a/view/lecturer-module.html
+++ b/view/lecturer-module.html
@@ -65,6 +65,24 @@
                     </a>
                 </li>
                 <li>
+                    <a href="/lecturer-contact">
+                        <i class="pe-7s-phone"></i>
+                        <p>Contacts</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/lecturer-statistics">
+                        <i class="pe-7s-graph"></i>
+                        <p>Statistics</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/lecturer-timetable">
+                        <i class="pe-7s-timer"></i>
+                        <p>Timetable</p>
+                    </a>
+                </li>
+                <li>
                     <a href="lecturer-notification.html">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
