--- a/view/reception-timetable.html
+++ b/view/reception-timetable.html
@@ -54,17 +54,23 @@
                 <li>
                     <a href="/reception-student">
                         <i class="pe-7s-id"></i>
-                        <p>Manage Student</p>
+                        <p>Student</p>
                     </a>
                 </li>
                 <li>
                     <a href="/reception-lecturer">
                         <i class="pe-7s-users"></i>
-                        <p>Manage Lecturer</p>
+                        <p>Lecturer</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/contact-detail">
+                    <a href="/reception-module">
+                        <i class="pe-7s-note2"></i>
+                        <p>Module</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/reception-contact">
                         <i class="pe-7s-phone"></i>
                         <p>Contacts</p>
                     </a>
@@ -72,7 +78,7 @@
                 <li class="active">
                     <a href="/reception-timetable">
                         <i class="pe-7s-timer"></i>
-                        <p>Manage Timetable</p>
+                        <p>Timetable</p>
                     </a>
                 </li>
             </ul>
