--- a/view/student-main.html
+++ b/view/student-main.html
@@ -39,7 +39,7 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="lecturer-main.html" class="simple-text">
-                    150528X
+                    Student
                 </a>
             </div>
 
@@ -57,9 +57,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/student-notification">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
+                    <a href="/student-timetable">
+                        <i class="pe-7s-timer"></i>
+                        <p>Timetable</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/student-contact">
+                        <i class="pe-7s-phone"></i>
+                        <p>Contacts</p>
                     </a>
                 </li>
             </ul>
