--- a/view/student-result.html
+++ b/view/student-result.html
@@ -40,7 +40,7 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="lecturer-main.html" class="simple-text">
-                    150528X
+                    Student
                 </a>
             </div>
 
@@ -58,9 +58,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/student-notification">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
+                    <a href="/student-timetable">
+                        <i class="pe-7s-timer"></i>
+                        <p>Timetable</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/student-contact">
+                        <i class="pe-7s-phone"></i>
+                        <p>Contacts</p>
                     </a>
                 </li>
             </ul>
