--- a/view/lecturer-timetable.html
+++ b/view/lecturer-timetable.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Lecturer</title>
+    <title>Reception</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -29,6 +29,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
 </head>
 <body>
@@ -39,7 +40,7 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    Lecturer
+                    Student
                 </a>
             </div>
 
@@ -74,13 +75,13 @@
                         <p>Statistics</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/lecturer-timetable">
                         <i class="pe-7s-timer"></i>
                         <p>Timetable</p>
                     </a>
                 </li>
-                <li class="active">
+                <li>
                     <a href="lecturer-notification.html">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
@@ -145,7 +146,102 @@
 
         <div class="content">
             <div class="container-fluid">
+                <div class="card" id="search">
+                    <div class="content">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Time Table Type</label>
+                                    <select name="sc-time-table-type" class="form-control">
+                                        <option value="SEM">Semester</option>
+                                        <option value="LEC">Lecturer</option>
+                                        <option value="LAB">Lab</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
 
+                        <div id="sc-sem-time-table">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Batch</label>
+                                        <select name="sc-batch" class="form-control"></select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Semester</label>
+                                        <select name="sc-semester" class="form-control">
+                                            <option value="1">Semester 1</option>
+                                            <option value="2">Semester 2</option>
+                                            <option value="3">Semester 3</option>
+                                            <option value="4">Semester 4</option>
+                                            <option value="5">Semester 5</option>
+                                            <option value="6">Semester 6</option>
+                                            <option value="7">Semester 7</option>
+                                            <option value="8">Semester 8</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="sc-lec-time-table">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Lecturer</label>
+                                        <select name="sc-lecturer" class="form-control"></select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="sc-lab-time-table">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Location</label>
+                                        <input type="text" name="sc-location" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input type="button" name="sc-find-btn" value="Find"
+                                               class="btn btn-info btn-fill">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <table class="table" id="sc-timetable">
+                                    <thead>
+                                    <tr>
+                                        <td>Time</td>
+                                        <td>Monday</td>
+                                        <td>Tuesday</td>
+                                        <td>Wednesday</td>
+                                        <td>Thursday</td>
+                                        <td>Friday</td>
+                                        <td>Saturday</td>
+                                        <td>Sunday</td>
+                                    </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -164,7 +260,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
@@ -181,5 +277,9 @@
 
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
+
+<script src="/socket.io/socket.io.js"></script>
+
+<script src="js/usr/view-timetable.js"></script>
 
 </html>
