--- a/view/student-contact.html
+++ b/view/student-contact.html
@@ -20,15 +20,16 @@
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
-
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
-
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' type='text/css'/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/pe-icon-7-stroke.css"/>
 
 </head>
 <body>
@@ -39,51 +40,34 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    Lecturer
+                    Student
                 </a>
             </div>
 
             <ul class="nav">
+                <li class="active">
                 <li>
-                    <a href="/lecturer">
+                    <a href="/student">
                         <i class="pe-7s-home"></i>
                         <p>Home</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/lecturer-module">
-                        <i class="pe-7s-note2"></i>
-                        <p>Module</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-result">
+                    <a href="/student-result">
                         <i class="pe-7s-upload"></i>
                         <p>Result</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/lecturer-contact">
-                        <i class="pe-7s-phone"></i>
-                        <p>Contacts</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-statistics">
-                        <i class="pe-7s-graph"></i>
-                        <p>Statistics</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/lecturer-timetable">
+                    <a href="/student-timetable">
                         <i class="pe-7s-timer"></i>
                         <p>Timetable</p>
                     </a>
                 </li>
                 <li class="active">
-                    <a href="lecturer-notification.html">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
+                    <a href="/student-contact">
+                        <i class="pe-7s-phone"></i>
+                        <p>Contacts</p>
                     </a>
                 </li>
             </ul>
@@ -145,7 +129,22 @@
 
         <div class="content">
             <div class="container-fluid">
-
+                <div class="card">
+                    <div class="content table-full-width table-responsive">
+                        <table class="table" id="contact-detail-table">
+                            <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Designation</td>
+                                <td>Email</td>
+                                <td>Contact</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -156,7 +155,6 @@
                 </p>
             </div>
         </footer>
-
     </div>
 </div>
 
@@ -164,7 +162,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
@@ -182,4 +180,27 @@
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 <script src="js/demo.js"></script>
 
+<script src="js/xlsx.full.min.js"></script>
+
+<script src="/socket.io/socket.io.js"></script>
+
+<script>
+    var socket = io('/contact-detail');
+    var table = document.getElementById('contact-detail-table');
+    while(table.rows.length > 1){
+        table.deleteRow(-1);
+    }
+    socket.emit('getContactDetail', function (err, res) {
+        if (err) {
+            return console.log(err);
+        }
+        res.forEach(function (contactDetail) {
+            var row = table.insertRow(-1);
+            row.insertCell(0).innerHTML = contactDetail.res + ". " + contactDetail.name;
+            row.insertCell(1).innerHTML = contactDetail.designation;
+            row.insertCell(2).innerHTML = contactDetail.email;
+            row.insertCell(3).innerHTML = contactDetail.contact;
+        });
+    });
+</script>
 </html>
