--- a/view/map.html
+++ b/view/map.html
@@ -21,6 +21,8 @@
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link href="css/demo.css" rel="stylesheet" />
+
+	<!--creted by Zupun-->
 </head>
 
 <body class="index-page">
