--- a/view/edit-event.html
+++ b/view/edit-event.html
@@ -79,7 +79,7 @@
 
             <ul class="nav">
                 <li>
-                    <a href="main-notices.html">
+                    <a href="index.html">
                         <i class="pe-7s-notebook"></i>
                         <p>Notices</p>
                     </a>
