--- a/view/create-regular.html
+++ b/view/create-regular.html
@@ -246,7 +246,7 @@
                     </div>
                 </div>
 
-                <div class="contaiiner animated fadeInDown" style="margin-top: 25px; padding: 25px 0px 25px 0px; color: black; width: 90%; text-align: center; border-radius: 25px">
+                <div class="contaiiner animated fadeInDown" style="margin-top: 25px; padding: 25px 0px 25px 0px; color: black; text-align: center; border-radius: 25px">
                     <button id="finish" class="btn btn-danger" type="button" onclick="finish()" >Create new notice</button>
                 </div>
             </div>
