--- a/view/reception-student.html
+++ b/view/reception-student.html
@@ -246,6 +246,16 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
+                                                        <label>Department</label>
+                                                        <input type="text" class="form-control" placeholder=""
+                                                               id="st-department">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
                                                         <label>Address</label>
                                                         <input type="text" class="form-control" placeholder=""
                                                                name="st-address">
@@ -256,8 +266,8 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Contact Number</label>
-                                                        <input type="text" class="form-control" placeholder=""
+                                                        <label>E-mail</label>
+                                                        <input type="email" class="form-control" placeholder=""
                                                                name="st-contact">
                                                     </div>
                                                 </div>
