Uploaded for validation

--- a/view/reception-timetable.html
+++ b/view/reception-timetable.html
@@ -140,10 +140,8 @@
 
         <div class="content">
             <div class="container-fluid">
-                <!-- Tabs with icons on Card -->
                 <div class="card card-nav-tabs">
                     <div class="header header-success">
-                        <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
                         <div class="nav-tabs-navigation">
                             <div class="nav-tabs-wrapper">
                                 <ul class="nav nav-tabs" data-tabs="tabs">
@@ -233,7 +231,7 @@
                                                     <div class="col-md-6">
                                                         <div class="form-group">
                                                             <label>Location</label>
-                                                            <input type="text" name="cn-location" class="form-control">
+                                                            <input type="text" name="cn-location" class="form-control" placeholder="Level 1 Lab">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -334,7 +332,7 @@
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <label>Location</label>
-                                                    <input type="text" name="up-location" class="form-control">
+                                                    <input type="text" name="up-location" class="form-control" placeholder="Level 1 Lab">
                                                 </div>
                                             </div>
                                         </div>
@@ -434,7 +432,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Location</label>
-                                                <input type="text" name="sc-location" class="form-control">
+                                                <input type="text" name="sc-location" class="form-control" placeholder="Level 1 Lab">
                                             </div>
                                         </div>
                                     </div>
