--- a/view/timetable.html
+++ b/view/timetable.html
@@ -151,7 +151,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Location</label>
-                                    <input type="text" name="sc-location" class="form-control">
+                                    <input type="text" name="sc-location" class="form-control" placeholder="Level 1 Lab">
                                 </div>
                             </div>
                         </div>
