--- a/view/lecturer-timetable.html
+++ b/view/lecturer-timetable.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Reception</title>
+    <title>Lecturer</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -40,7 +40,7 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    Student
+                    LECTURER
                 </a>
             </div>
 
@@ -206,7 +206,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Location</label>
-                                        <input type="text" name="sc-location" class="form-control">
+                                        <input type="text" name="sc-location" class="form-control" placeholder="Level 1 Lab">
                                     </div>
                                 </div>
                             </div>
