Lecturer Creates Notices

--- a/view/index.html
+++ b/view/index.html
@@ -251,19 +251,19 @@
 												Inbox
 											</a>
 										</li>
-										<li class="" id="sentTab">
-											<a href="#update" data-toggle="tab" aria-expanded="false">
-												<i class="material-icons">done_all</i>
-												Sent
-											</a>
-										</li>
-										<li class="" id="w8nApprovalTab" style="visibility: hidden">
-											<a href="#view-all" data-toggle="tab" aria-expanded="false">
-												<i class="material-icons">thumbs_up_down</i>
-												w8n approval
-											</a>
+										<!--<li class="" id="sentTab">-->
+											<!--<a href="#update" data-toggle="tab" aria-expanded="false">-->
+												<!--<i class="material-icons">done_all</i>-->
+												<!--Sent-->
+											<!--</a>-->
+										<!--</li>-->
+										<!--<li class="" id="w8nApprovalTab" style="visibility: hidden">-->
+											<!--<a href="#view-all" data-toggle="tab" aria-expanded="false">-->
+												<!--<i class="material-icons">thumbs_up_down</i>-->
+												<!--w8n approval-->
+											<!--</a>-->
 
-										</li>
+										<!--</li>-->
 									</ul>
 								</div>
 							</div>
@@ -494,9 +494,9 @@
     <script src="js/material.min.js"></script>
 
 <script>
-    if (loggedID=="0000000"){
-        document.getElementById("w8nApprovalTab").setAttribute("style","visibility: visible");
-    }
+//    if (loggedID=="0000000"){
+//        document.getElementById("w8nApprovalTab").setAttribute("style","visibility: visible");
+//    }
     refresh();
 
     function sortBoth() {
