--- a/view/change-password.html
+++ b/view/change-password.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Reception</title>
+    <title>Lecturer</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -17,68 +17,77 @@
     <!-- Animation library for notifications   -->
     <link href="css/animate.min.css" rel="stylesheet"/>
 
+    <!--CSS for material kit-->
+    <link href="css/material-kit.css" rel="stylesheet"/>
+
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
-
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
-
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' type='text/css'/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/pe-icon-7-stroke.css"/>
 
 </head>
 <body>
-
+<script src="/socket.io/socket.io.js"></script>
 <div class="wrapper">
     <div class="sidebar" data-color="purple" data-image="img/sidebar-5.jpg">
 
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    Reception
+                    Lecturer
                 </a>
             </div>
 
             <ul class="nav">
                 <li>
-                    <a href="/reception">
+                    <a href="/lecturer">
                         <i class="pe-7s-home"></i>
                         <p>Home</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/reception-student">
-                        <i class="pe-7s-id"></i>
-                        <p>Student</p>
-                    </a>
-                </li>
-                <li class="active">
-                    <a href="/reception-lecturer">
-                        <i class="pe-7s-users"></i>
-                        <p>Lecturer</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/reception-module">
+                    <a href="/lecturer-module">
                         <i class="pe-7s-note2"></i>
                         <p>Module</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/reception-contact">
+                    <a href="/lecturer-result">
+                        <i class="pe-7s-upload"></i>
+                        <p>Result</p>
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="/lecturer-contact">
                         <i class="pe-7s-phone"></i>
                         <p>Contacts</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/reception-timetable">
+                    <a href="/lecturer-statistics">
+                        <i class="pe-7s-graph"></i>
+                        <p>Statistics</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/lecturer-timetable">
                         <i class="pe-7s-timer"></i>
                         <p>Timetable</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="lecturer-notification.html">
+                        <i class="pe-7s-bell"></i>
+                        <p>Notifications</p>
                     </a>
                 </li>
             </ul>
@@ -142,101 +151,62 @@
             <div class="container-fluid">
                 <!-- Tabs with icons on Card -->
                 <div class="card card-nav-tabs">
-                    <div class="header header-success">
-                        <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
-                        <div class="nav-tabs-navigation">
-                            <div class="nav-tabs-wrapper">
-                                <ul class="nav nav-tabs" data-tabs="tabs">
-                                    <li class="active">
-                                        <a href="#register-new-lecturer" data-toggle="tab">
-                                            <i class="material-icons">person_pin</i>
-                                            New Lecturer
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#view-all" data-toggle="tab">
-                                            <i class="material-icons">view_list</i>
-                                            View All
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                     <div class="content">
                         <div class="tab-content">
-                            <div class="tab-pane active" id="register-new-lecturer">
+                            <div class="tab-pane active" id="create-new">
                                 <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">Login to Account</h4>
+                                    </div>
                                     <div class="content">
-                                        <form id="register-new-user-form">
+                                        <form id="create-new-form">
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Name</label>
+                                                        <label id="cp-user-label">User: </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <div class="col-md-4">
+                                                    <div class="form-group">
+                                                        <label>Password(of minimum 8 length)</label>
                                                         <div class="row">
-                                                            <div class="col-sm-3">
-                                                                <select name="cn-res" class="form-control">
-                                                                    <option value="Mr">Mr</option>
-                                                                    <option value="Mrs">Mrs</option>
-                                                                    <option value="Ms">Miss</option>
-                                                                    <option value="Dr">Dr</option>
-                                                                    <option value="Prof">Prof</option>
-                                                                </select>
+                                                            <div class="col-md-11">
+                                                                <input type="password" class="form-control" id="cp-password" pattern=".{8,}" required>
                                                             </div>
-                                                            <div class="col-sm-9">
-                                                                <input type="text" class="form-control" name="cn-name">
+                                                            <div class="col-md-1">
+                                                                <i class="fa fa-eye-slash fa-2x" id="cp-dispEye" onclick="doSetPassword()"></i>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
+
                                             </div>
                                             <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label>Index Number</label>
-                                                        <input type="text" class="form-control" name="cn-index">
+                                                <div class="col-md-4">
+                                                    <div class="form-group" id="repassGrp">
+                                                        <label>Reconfirm Password</label>
+                                                        <input type="password" class="form-control" id="cp-repassword" pattern=".{8,}" oninput='checkPWisMatch()' required>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label>Email</label>
-                                                        <input type="text" class="form-control" name="cn-email">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label>Department</label>
-                                                        <input type="text" class="form-control" name="cn-department">
-                                                    </div>
-                                                </div>
-                                            </div>
+
                                             <button type="submit" class="btn btn-info btn-fill">
-                                                Submit
+                                                Create Password
                                             </button>
                                             <div class="clearfix"></div>
+
                                         </form>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane" id="view-all">
-                                <div class="card">
-                                    <div class="content">
-                                        <table class="table" id="lecturer-table">
-                                            <tr>
-                                                <td>Name</td>
-                                                <td>Email</td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
+                <!-- End Tabs with icons on Card -->
             </div>
         </div>
 
@@ -247,7 +217,6 @@
                 </p>
             </div>
         </footer>
-
     </div>
 </div>
 
@@ -258,23 +227,29 @@
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
-<!--  Checkbox, Radio & Switch Plugins -->
-<script src="js/bootstrap-checkbox-radio-switch.js"></script>
+<!--&lt;!&ndash;  Checkbox, Radio & Switch Plugins &ndash;&gt;-->
+<!--<script src="js/bootstrap-checkbox-radio-switch.js"></script>-->
 
-<!--  Charts Plugin -->
-<script src="js/chartist.min.js"></script>
+<!--&lt;!&ndash;  Charts Plugin &ndash;&gt;-->
+<!--<script src="js/chartist.min.js"></script>-->
 
-<!--  Notifications Plugin    -->
-<script src="js/bootstrap-notify.js"></script>
+<!--&lt;!&ndash;  Notifications Plugin    &ndash;&gt;-->
+<!--<script src="js/bootstrap-notify.js"></script>-->
 
 <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
 <script src="js/light-bootstrap-dashboard.js"></script>
 
+<!--JS for material-->
+<script src="js/material-kit.js"></script>
+<script src="js/material.min.js"></script>
+
+<script src="js/usr/change-password.js"></script>
+
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
-<script src="js/demo.js"></script>
+<!--<script src="js/xlsx.full.min.js"></script>-->
 
-<script src="/socket.io/socket.io.js"></script>
 
-<script src="js/usr/reception-lecturer.js"></script>
+
+
 
 </html>
