--- a/view/css/light-bootstrap-dashboard.css
+++ b/view/css/light-bootstrap-dashboard.css
@@ -67,7 +67,7 @@ button.close {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: "Roboto","Helvetica Neue",Arial,sans-serif;
-  font-weight: 400;
+  /*font-weight: 400;*/
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
